# timberborn_calculator

./: .gitignore  build  pyproject.toml
.github/workflows/: build.yml
page/: main.html  main.js  package-lock.json  package.json
page/public/: index.html
page/src/: App.tsx  pyodideContext.ts
page/src/components/: ProductionMenu.tsx  ProductionNode.tsx  ProductionView.tsx
production_chain/: __init__.py  __main__.py  game_data.yaml  main.py  production_chain.py  pyodine_interface.py  visualize.py
