[tool.poetry]
name = "production-chain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "production_chain"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
